fix: fixed layout bugs

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -93,3 +93,9 @@
     min-width: 150px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .header__text {
+    font-size: 14px;
+  }
+}
