--- a/src/components/ProjectPopup/ProjectPopup.css
+++ b/src/components/ProjectPopup/ProjectPopup.css
@@ -18,14 +18,14 @@
 
 .project-popup__container {
   width: 50%;
-  background-color: var(--dark-grey-color);
+  background-color: rgba(2, 12, 24, .9);
   margin: auto;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
   row-gap: 10px;
   column-gap: 5px;
-  padding: 5px 10px;
+  padding: 10px;
 }
 
 .project-popup__close-btn {
@@ -37,18 +37,16 @@
   background-position: center;
   background-color: transparent;
   padding: 0;
-  /*border: 1px solid var(--background-white-color);*/
-  /*border-radius: 5px;*/
-  /*transition: box-shadow var(--animation-timing);*/
+  border: none;
 }
 
 .project-popup__close-btn:hover {
   cursor: pointer;
-  /*box-shadow: 2px 2px 5px var(--background-white-color);*/
 }
 
 .project-popup__slider-wrapper {
   display: flex;
+  justify-content: space-between;
 }
 
 .project-popup__scroll-btn {
@@ -59,14 +57,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
-  /*border: 1px solid var(--background-white-color);*/
+  border: none;
   border-radius: 5px;
-  /*transition: box-shadow var(--animation-timing);*/
 }
 
 .project-popup__scroll-btn:hover {
   cursor: pointer;
-  /*box-shadow: 2px 2px 5px var(--background-white-color);*/
 }
 
 .project-popup__scroll-btn_left {
@@ -100,9 +96,8 @@
 }
 
 .project-popup__bullet_active {
-  width: 20px;
-  height: 20px;
   background-color: var(--blue-color);
+  box-shadow: 0 0 5px var(--blue-color);
 }
 
 @media screen and (max-width: 915px) {
@@ -121,10 +116,12 @@
   .project-popup__container {
     width: 80%;
   }
+
   .project-popup__close-btn {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
   }
+
   .project-popup__scroll-btn {
     width: 20px;
     height: 25px;
@@ -132,6 +129,10 @@
 }
 
 @media screen and (max-width: 475px) {
+  .project-popup__container {
+    width: 90%;
+  }
+
   .project-popup__bullet-section {
     gap: 20px;
     margin: 20px
